@@ -2,33 +2,27 @@ package seedu.smartnus.logic.commands;
 
 import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static seedu.smartnus.testutil.Assert.assertThrows;
 
-import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.function.Predicate;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
-import javafx.collections.ObservableList;
-import seedu.smartnus.commons.core.GuiSettings;
-import seedu.smartnus.commons.core.theme.Theme;
-import seedu.smartnus.model.Model;
+import seedu.smartnus.commons.core.Messages;
+import seedu.smartnus.logic.commands.exceptions.CommandException;
+import seedu.smartnus.model.ModelStub;
+import seedu.smartnus.model.ModelStubTagPanel;
 import seedu.smartnus.model.ReadOnlySmartNus;
-import seedu.smartnus.model.ReadOnlyUserPrefs;
 import seedu.smartnus.model.SmartNus;
 import seedu.smartnus.model.note.Note;
-import seedu.smartnus.model.question.Question;
-import seedu.smartnus.model.statistic.TagStatistic;
 import seedu.smartnus.testutil.NoteBuilder;
+import seedu.smartnus.ui.panel.NoteListPanel;
 
 public class AddNoteCommandTest {
     @Test
-    public void constructor_nullQuestion_throwsNullPointerException() {
+    public void constructor_nullNote_throwsNullPointerException() {
         assertThrows(NullPointerException.class, () -> new AddNoteCommand(null));
     }
 
@@ -40,7 +34,27 @@ public class AddNoteCommandTest {
         CommandResult commandResult = new AddNoteCommand(validNote).execute(modelStub);
 
         assertEquals(String.format(AddNoteCommand.MESSAGE_SUCCESS, validNote), commandResult.getFeedbackToUser());
-        assertEquals(Arrays.asList(validNote), modelStub.notesAdded);
+        assertEquals(List.of(validNote), modelStub.notesAdded);
+    }
+
+    @Test
+    public void execute_duplicateNote_throwsCommandException() {
+        Note validNote = new NoteBuilder().build();
+        AddNoteCommand addCommand = new AddNoteCommand(validNote);
+        ModelStub modelStub = new ModelStubWithNote(validNote);
+
+        assertThrows(CommandException.class,
+                AddNoteCommand.MESSAGE_DUPLICATE_NOTE, () -> addCommand.execute(modelStub));
+    }
+
+    @Test
+    public void execute_inWrongPanel_throwsException() {
+        ModelStubTagPanel modelStub = new ModelStubTagPanel();
+        Note validNote = new NoteBuilder().build();
+
+
+        assertThrows(CommandException.class,
+                Messages.MESSAGE_NOT_IN_NOTE_PANEL, () -> new AddNoteCommand(validNote).execute(modelStub));
     }
 
     @Test
@@ -51,172 +65,20 @@ public class AddNoteCommandTest {
         AddNoteCommand addBobCommand = new AddNoteCommand(bob);
 
         // same object -> returns true
-        assertTrue(addAliceCommand.equals(addAliceCommand));
+        assertEquals(addAliceCommand, addAliceCommand);
 
         // same values -> returns true
         AddNoteCommand addAliceCommandCopy = new AddNoteCommand(alice);
-        assertTrue(addAliceCommand.equals(addAliceCommandCopy));
+        assertEquals(addAliceCommand, addAliceCommandCopy);
 
         // different types -> returns false
-        assertFalse(addAliceCommand.equals(1));
+        assertNotEquals(1, addAliceCommand);
 
         // null -> returns false
-        assertFalse(addAliceCommand.equals(null));
+        assertNotEquals(null, addAliceCommand);
 
         // different note -> returns false
-        assertFalse(addAliceCommand.equals(addBobCommand));
-    }
-
-    private class ModelStub implements Model {
-        @Override
-        public void setUserPrefs(ReadOnlyUserPrefs userPrefs) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public ReadOnlyUserPrefs getUserPrefs() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public GuiSettings getGuiSettings() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void setGuiSettings(GuiSettings guiSettings) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public Path getSmartNusFilePath() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void setSmartNusFilePath(Path smartNusFilePath) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void addQuestion(Question question) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void setSmartNus(ReadOnlySmartNus smartNus) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public ReadOnlySmartNus getSmartNus() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public boolean hasQuestion(Question question) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void deleteQuestion(Question target) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void setQuestion(Question target, Question editedQuestion) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public ObservableList<Question> getFilteredQuestionList() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public ObservableList<Question> getFilteredQuizQuestionList() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void updateFilteredQuestionList(Predicate<Question> predicate) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void resetFilteredQuestionList() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void addNote(Note note) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void deleteNote(Note target) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public boolean hasNote(Note note) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void setNote(Note target, Note editedNote) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public ObservableList<Note> getFilteredNoteList() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void updateFilteredNoteList(Predicate<Note> predicate) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void updateFilteredQuizQuestionList(Predicate<Question> predicate) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void sortFilteredQuizQuestionList(Comparator<Question> comparator) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void setTheme(Theme theme) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public Theme getTheme() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void setPanel(String panel) {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public String getPanel() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public ObservableList<TagStatistic> getTagStatistic() {
-            throw new AssertionError("This method should not be called.");
-        }
-
-        @Override
-        public void updateFilteredTagStatistic(Predicate<TagStatistic> predicate) {
-            throw new AssertionError("This method should not be called.");
-        }
+        assertNotEquals(addAliceCommand, addBobCommand);
     }
 
     /**
@@ -224,6 +86,11 @@ public class AddNoteCommandTest {
      */
     private class ModelStubAcceptingNoteAdded extends ModelStub {
         final ArrayList<Note> notesAdded = new ArrayList<>();
+
+        @Override
+        public String getPanel() {
+            return NoteListPanel.NOTE_PANEL;
+        }
 
         @Override
         public void addNote(Note note) {
@@ -240,6 +107,29 @@ public class AddNoteCommandTest {
         @Override
         public ReadOnlySmartNus getSmartNus() {
             return new SmartNus();
+        }
+    }
+
+    /**
+     * A Model stub that contains a single note.
+     */
+    private class ModelStubWithNote extends ModelStub {
+        private final Note note;
+
+        ModelStubWithNote(Note note) {
+            requireNonNull(note);
+            this.note = note;
+        }
+
+        @Override
+        public String getPanel() {
+            return NoteListPanel.NOTE_PANEL;
+        }
+
+        @Override
+        public boolean hasNote(Note note) {
+            requireNonNull(note);
+            return this.note.isSameNote(note);
         }
     }
 }
